Fix: Ensure spacing between toolbar buttons

--- a/web/src/app/toolbar/toolbar.module.css
+++ b/web/src/app/toolbar/toolbar.module.css
@@ -16,6 +16,7 @@
 .center {
 	flex: 0 0 auto;
 	width: 300px;
+	margin: 0 16px;
 }
 
 .right {
